hphp/test/zend/good/ext-standard-general_functions/closures_001.php
<?php
register_shutdown_function(function () { echo "Hello World!\n"; });

echo "Done\n";
?>