hphp/test/zend/bad/zend-multibyte/multibyte_encoding_002.php
<?php
print "Hello World\n";
?>
===DONE===